Corrects remember me and forgot password positioning on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -607,6 +607,8 @@ body {
     font-size: 24px; }
   .text__primary {
     text-align: center; }
+    .text__primary--4 {
+      font-size: 14px; }
   .text__secondary {
     line-height: 1.2; } }
 
@@ -1086,8 +1088,6 @@ body {
   .form__group {
     width: 270px; }
     .form__group-remember.flex {
-      flex-direction: column;
-      align-items: flex-start;
       margin-bottom: 15px; }
   .form__input {
     width: 200px; }
@@ -1117,8 +1117,7 @@ body {
   display: block;
   position: relative;
   padding-left: 30px;
-  cursor: pointer;
-  font-size: 16px; }
+  cursor: pointer; }
   .control input {
     position: absolute;
     z-index: -1;
