--- a/scss/components/_customCheckbox.scss
+++ b/scss/components/_customCheckbox.scss
@@ -2,9 +2,7 @@
     display: block;
     position: relative;
     padding-left: 30px;
-    // margin-bottom: 15px;
     cursor: pointer;
-    font-size: 16px;
     input {
         position: absolute;
         z-index: -1;
