--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -148,8 +148,6 @@
             width: 270px;
 
             &-remember.flex {
-                flex-direction: column;
-                align-items: flex-start;
                 margin-bottom: 15px;
             }
         }
